--- a/rapidsms.ini
+++ b/rapidsms.ini
@@ -4,15 +4,20 @@
 #
 # The main configuration of the RapidSMS server. It contains a list of
 # apps and backends to run, which can be names of app classes, or (in the
-# case of multiple apps or backends of the same type) names for apps of
-# the same type (see APPS and BACKENDS sections below).
+# case of multiple apps or backends of the same type) names of [section]s
+# in this ini file: see the APPS and BACKENDS sections below.
 #
 # apps=[app1,app2,app3,...]         * comma-separated list of apps to load
 # backends=[backend1,backend2,...]  * comma-separated list of backends to load
 
 [rapidsms]
-apps=echo
-backends=spomc
+#apps=default, messaging, webui, admin, echo, form, supply, nigeria, reporters, injector, ajax, export
+apps=responder, webui, admin, ajax, locations, reporters, messaging, questions, querylog, backends, default, nutrition 
+#, export, querylog, echo, backends, default
+#apps=webui, sms, malnutrition, mctc, admin, reporters, ajax, messaging, backends, querylog
+#apps=echo
+backends=gsm
+
 
 # -- DATABASE
 #
@@ -25,6 +30,7 @@ backends=spomc
 # host=<datbase-host>                                           * defaults to localhost (empty string)
 # port=<database-port>                                          * not used for sqlite3
 
+
 [database]
 engine=sqlite3
 name=/tmp/rapidsms.sqlite3
@@ -32,6 +38,16 @@ name=/tmp/rapidsms.sqlite3
 #password=
 #host=
 #port=
+
+
+# -- DJANGO
+#
+# Optional Django webui configuration.
+#
+[django]
+debug=true
+auth_profile_module=sms.Profile
+
 
 # -- LOG
 #
@@ -42,7 +58,9 @@ name=/tmp/rapidsms.sqlite3
 
 [log]
 level=debug
+
 file=/tmp/rapidsms.log
+
 
 # -- APPS
 #
@@ -51,9 +69,9 @@ file=/tmp/rapidsms.log
 # listed for your app it will use the default parameters. However, if you wish to
 # run two apps of the same type, you MUST define configure them explicitly here.
 
-#[alpha]
-#beginning=yes
-#end=no
+[echo]
+#a=b
+
 
 # -- BACKENDS
 #
@@ -62,20 +80,14 @@ file=/tmp/rapidsms.log
 # listed for your backend it will use the default parameters. However, if you wish to
 # run two backends of the same type, you MUST define configure them explicitly here.
 
-#[spomc]
-#type=spomc
-#port=9000
+[gsm]
+type=gsm
+port=/dev/ttyUSB0
+baudrate=115200
+xonxoff=1
+rtscts=1
 
-# -- DJANGO
-#
-# In this area you can define configuration options for django that would usually
-# go into your settings.py file. There's no need to make the variables uppercase
-# also do not specify strings by surrounding them with the quotes " or '. This
-# is automatically taken care of before injecting it into django's core configuration
-[django]
-# Specify a cache backend. Caching becomes necessary when you have views or sections
-# that are expensive to generate. Please read http://docs.djangoproject.com/en/dev/topics/cache/
-# for more information on how to use the caching capabilities of django.
-#
-# cache_backend=dummy:///
-cache_backend=file:///tmp/django_cache
+[debug]
+title=SPOMC Debug
+type=spomc
+port=8300
