My ini file conforms with the apps that I use for INFSSS

--- a/rapidsms.ini
+++ b/rapidsms.ini
@@ -11,11 +11,8 @@
 # backends=[backend1,backend2,...]  * comma-separated list of backends to load
 
 [rapidsms]
-#apps=default, messaging, webui, admin, echo, form, supply, nigeria, reporters, injector, ajax, export
-apps=responder, webui, admin, ajax, locations, reporters, messaging, questions, querylog, backends, default, nutrition 
-#, export, querylog, echo, backends, default
-#apps=webui, sms, malnutrition, mctc, admin, reporters, ajax, messaging, backends, querylog
-#apps=echo
+apps=responder, webui, admin, ajax, locations, reporters, nutrition,infsss 
+#apps=responder, webui, admin, ajax, locations, reporters, messaging, questions, querylog, backends, default, nutrition 
 backends=gsm
 
 
