--- a/rapidsms.ini
+++ b/rapidsms.ini
@@ -11,7 +11,7 @@
 # backends=[backend1,backend2,...]  * comma-separated list of backends to load
 
 [rapidsms]
-apps=responder, webui, admin, ajax, locations, reporters, nutrition,infsss 
+apps=responder, webui, admin, ajax, locations, export,reporters,logger, docmanager, nutrition,infsss
 #apps=responder, webui, admin, ajax, locations, reporters, messaging, questions, querylog, backends, default, nutrition 
 backends=gsm
 
@@ -44,7 +44,8 @@ name=/tmp/rapidsms.sqlite3
 [django]
 debug=true
 auth_profile_module=sms.Profile
-
+MEDIA_ROOT = ./uploaded
+#MEDIA_URL = 
 
 # -- LOG
 #
