--- a/rapidsms.ini
+++ b/rapidsms.ini
@@ -11,7 +11,7 @@
 # backends=[backend1,backend2,...]  * comma-separated list of backends to load
 
 [rapidsms]
-apps=responder, webui, admin, ajax, locations, export,reporters,logger, docmanager, nutrition,infsss
+apps=responder, webui, admin, ajax, locations, export,messaging,reporters,logger, echo,docmanager, person,displaymanager, pilot, healthtables, childhealth
 #apps=responder, webui, admin, ajax, locations, reporters, messaging, questions, querylog, backends, default, nutrition 
 backends=gsm
 
